<resources>
    <string name="app_name">Expensify</string>
    <string name="title_activity_main_app">MainApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_expensify">Expensify</string>
    <string name="password">Password</string>
    <string name="date">Date</string>
    <string name="done">Done</string>
    <string name="expense_category">Expense Category</string>
    <string name="income_category">Income Category</string>
    <string name="newCategory">New Category Name</string>
    <string name="add">Add</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="transaction">Transaction</string>
    <string name="reset">Reset Password</string>
    <string name="income">Add Income</string>
    <string name="amount">Amount</string>
    <string name="expense">Add Expense</string>
    <string name="edesc">Add details of expense</string>
    <string name="idesc">Add details of income</string>
    <string name="desc">Description</string>
    <string name="method">Method</string>
    <string name="category">Category</string>
    <string name="pickDate">Pick Date</string>
    <string name="back">Back</string>
    <string name="all">All</string>
    <string name="inco">Income</string>
    <string name="expe">Expense</string>
    <string name="type">Type</string>
    <string name="name">Name</string>
    <string name="contact">Contacts</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="delete">Delete Transaction</string>
    <string name="calculator">Calculator</string>
    <string name="choose">Choose Type</string>
    <string name="select">Select Category</string>
    <string name="calc">Calculate</string>
    <string name="clear">Clear</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="start">Start Date</string>
    <string name="end">End Date</string>
    <string name="list">List</string>
    <string name="today">Today</string>
    <string name="month">This month</string>
    <string name="choDate">Choose dates</string>

</resources>
