<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_expense"
            android:icon="@drawable/ic_expense"
            android:title="@string/expense_category" />
        <item
            android:id="@+id/nav_income"
            android:icon="@drawable/ic_income"
            android:title="@string/income_category" />
        <item
            android:id="@+id/nav_transaction"
            android:icon="@drawable/ic_transaction"
            android:title="@string/transaction" />
        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/ic_calculator"
            android:title="@string/calculator"/>

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/logout" />

    </group>

</menu>
