<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView_date"
        android:layout_width="319dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="7dp"
        android:text="@string/date"
        android:textSize="25sp"
        android:textColor="@color/logored"/>
    <TextView
        android:id="@+id/type_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_date"
        android:layout_alignStart="@+id/textView_date"
        android:layout_below="@+id/textView_date"
        android:text="@string/type"
        android:textSize="21sp"
        android:textColor="@color/logoyell"/>

    <TextView
        android:id="@+id/textView_type"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_amount"
        android:layout_alignStart="@+id/textView_amount"
        android:layout_below="@+id/textView_date"
        android:text="@string/type"
        android:textSize="21sp"
        android:textColor="@color/logoyell"/>

    <TextView
        android:id="@+id/textView_category"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_method"
        android:layout_alignStart="@+id/textView_method"
        android:layout_below="@+id/textView_amount"
        android:text="@string/category"
        android:textSize="18sp"
        android:textColor="@color/cayn"/>

    <TextView
        android:id="@+id/textView_method"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_description"
        android:layout_alignStart="@+id/textView_description"
        android:layout_below="@+id/textView_category"
        android:text="@string/method"
        android:textSize="18sp"
        android:textColor="@color/cayn"/>

    <TextView
        android:id="@+id/textView_description"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_method"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@+id/textView8"
        android:layout_toRightOf="@+id/textView8"
        android:text="@string/desc"
        android:textSize="18sp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/cayn"/>

    <TextView
        android:id="@+id/textView_amount"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_category"
        android:layout_alignStart="@+id/textView_category"
        android:layout_below="@+id/textView_type"
        android:text="@string/amount"
        android:textSize="18sp"
        android:textColor="@color/cayn"/>

    <TextView
        android:id="@+id/amount_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/type_tv"
        android:layout_alignStart="@+id/type_tv"
        android:layout_below="@+id/type_tv"
        android:text="@string/amount"
        android:textSize="18sp"
        android:textColor="@color/cayn"/>

    <TextView
        android:id="@+id/category_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/amount_tv"
        android:layout_alignStart="@+id/amount_tv"
        android:layout_below="@+id/amount_tv"
        android:text="@string/category"
        android:textSize="18sp"
        android:textColor="@color/cayn"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/category_tv"
        android:layout_alignStart="@+id/category_tv"
        android:layout_below="@+id/category_tv"
        android:text="@string/method"
        android:textSize="18sp"
        android:textColor="@color/cayn"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:layout_below="@+id/textView_method"
        android:text="@string/desc"
        android:textSize="18sp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/cayn"/>






</RelativeLayout>